# acb-large-print-toolkit

./: .dockerignore  .gitignore  .prettierignore  .python-version  .vale.ini  BITS-FEEDBACK-PLAN.md  BRANCH_PROTECTION_RULES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEEDBACK_SETUP.md  README.md  TODO.md  accessibility.md  branch-protection.json  commit_msg.txt  csedesigns.com.zone  docker-compose.dev.yml  glow-oidc-client.json  glowplan.html  glowplan.md  keycloak-setup.sh  keycloak-users.json  pdf.html  pdf.md  post_findings.json  roadmap.md  server.credentials.template  skills-lock.json
desktop/: .env.example  README.md  build.py  pyproject.toml  requirements.txt
desktop/installer/: acb-large-print.iss
desktop/src/acb_large_print/: __init__.py  __main__.py  ace_runner.py  ai_provider.py  auditor.py  braille_converter.py  cli.py  cli_main.py  constants.py  converter.py  epub_auditor.py  epub_meta_display.py  exporter.py  fixer.py  gui.py  heading_detector.py  md_auditor.py  pandoc_converter.py  pdf_auditor.py  pdf_forms.py  pipeline_converter.py  pptx_auditor.py  reporter.py  rule_policy.py  stress_profiles.py  template.py  version.py  wcag_language.py  xlsx_auditor.py  xlsx_fixer.py
desktop/src/acb_large_print/ai_providers/: __init__.py  ollama_provider.py  openrouter_provider.py
desktop/tests/: test_ai_provider.py  test_ai_provider_extensive.py  test_auditor_alt_text.py  test_cli_pdf_inspect.py  test_conversion_format_support.py  test_epub_auditor.py  test_epub_meta_display.py  test_feedback_regressions.py  test_fixer_headings.py  test_heading_ai_e2e.py  test_heading_detector.py  test_heading_detector_extensive.py  test_heading_stress_corpus.py  test_md_auditor_feature_parity.py  test_ollama_live.py  test_openrouter_provider.py  test_pdf_forms.py  test_pdf_table_extraction.py  test_template_profiles.py  test_wcag_language.py
web/: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.example  Dockerfile  README.md  docker-compose.keycloak.yml  docker-compose.prod.yml  docker-compose.wsl.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest-results.txt  requirements.txt  web-regression.txt
web/e2e/: README.md  playwright.config.mjs
web/e2e/instance/: .gitignore  ai_quota.db  feature_flags.json
web/e2e/scripts/: generate-issue-report.mjs  run-impacted-axe.mjs
web/e2e/tests/: axe-audit.spec.mjs  regression.spec.mjs
web/instance/: ai_quota.db  feature_flags.db  feature_flags.json
web/keycloak/: realm.template.json
web/src/acb_large_print_web/: __init__.py  ai_features.py  ai_gateway.py  app.py  async_orchestration.py  branding.py  chat_handler.py  credentials.py  csv_export.py  customization_warning.py  db.py  email.py  encryption.py  feature_flags.py  firebase_auth.py  gating.py  keycloak.py  magic_features.py  models.py  oidc_auth.py  permissions.py  pii_guardrails.py  profile_sync.py  report_cache.py  rule_reference_metadata.py  rules.py  site_audit.py  speech.py  speech_metrics.py  tool_usage.py  upload.py  user_ai.py  version.py  visitor_counter.py  visual_items.py  workshop_store.py  wsgi.py
web/src/acb_large_print_web/routes/: about.py  account.py  admin.py  ai_usage.py  alt_text.py  audit.py  auth.py  braille.py  changelog.py  chat.py  consent.py  convert.py  docs_pages.py  export.py  faq.py  feedback.py  fix.py  guide.py  guidelines.py  jobs.py  magic.py  main.py  pdf_forms.py  playground.py  prd.py  privacy.py  process.py  role.py  rules_ref.py  settings.py  site_audit.py  speech.py  status.py  template.py  whisperer.py  workshop.py
web/src/acb_large_print_web/static/: a11y-enhancements.js  acb-large-print.css  ai-meter.js  alt-text-helper.js  beta-chat.js  client-logging.js  consent.js  dropzone.js  forms.css  guidelines.js  preferences.js  settings-ai.js  sidebar.js  speech.js  tabs.js  theme.js  toast.js
web/src/acb_large_print_web/tasks/: __init__.py  convert_tasks.py
web/src/acb_large_print_web/templates/: _findings_table.html  _help_links.html  _help_rules.html  _workflow_tip.html  about-mcp.html  about.html  admin_ai.html  admin_analytics.html  admin_flags.html  admin_login.html  admin_queue.html  admin_request_access.html  admin_requests.html  admin_speech.html  alt_text_helper.html  announcement.html  audit_batch_report.html  audit_form.html  audit_report.html  base.html  beta_chat.html  busy.html  (+39 more)
web/tests/: .tmp-regression-log.txt  .tmp-webreg.txt  conftest.py  helpers.py  test_admin_flags.py  test_ai_alt_text_and_quota.py  test_ai_feature_gates.py  test_app.py  test_auth_account_flow.py  test_braille.py  test_chat.py  test_chat_route_pii_guardrails.py  test_convert_odt.py  test_convert_text_formats.py  test_customization_warning.py  test_email.py  test_feedback.py  test_fix_routes.py  test_gating_ai_gateway.py  test_jobs_accessibility.py  test_keycloak_oidc.py  test_landmark_aria_guardrails.py  test_magic_routes.py  test_ollama_gateway.py  test_openrouter_integration.py  test_pdf_forms_routes.py  test_rules_ref.py  test_site_audit.py  test_speech_routes.py  test_static_routes.py  test_upload.py  test_v270_new_routes.py  test_workshop_routes.py
web/tools/: check_ai_gating.py  run_migrate.py  sweep_ai_tests.py  ungarded_ai_tests.txt
(+420 files in other folders)
