[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acb-large-print-web"
version = "2.0.0"
description = "Flask web interface for the ACB Large Print Tool"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Jeff Bishop", email = "jeff@bitsonline.org"},
]
keywords = ["accessibility", "large-print", "ACB", "Flask", "web"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Adaptive Technologies",
]
dependencies = [
    "flask>=3.1",
    "flask-wtf>=1.2",
    "flask-limiter>=3.5",
    "gunicorn>=23.0",
    "acb-large-print",
    "markitdown[pdf,docx,xlsx,pptx]>=0.1.5",
    "weasyprint>=62.0",
    "faster-whisper>=1.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
acb_large_print_web = ["templates/*.html", "templates/partials/*.html", "static/**/*"]
