[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acb-large-print-web"
version = "2.6.0"
description = "Flask web interface for the ACB Large Print Tool"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Jeff Bishop", email = "jeff@bitsonline.org"},
]
keywords = ["accessibility", "large-print", "ACB", "Flask", "web"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Adaptive Technologies",
]
dependencies = [
    "flask>=3.1",
    "flask-wtf>=1.2",
    "flask-limiter>=3.5",
    "gunicorn>=23.0",
    "acb-large-print",
    "markitdown[pdf,docx,xlsx,pptx]>=0.1.5",
    "weasyprint>=62.0",
    "requests>=2.32.0",
    "mutagen>=1.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
acb_large_print_web = ["templates/*.html", "templates/partials/*.html", "static/**/*"]

# ---------------------------------------------------------------------------
# Ruff -- fast Python linter + formatter
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
# F = pyflakes, E/W = pycodestyle, I = isort, UP = pyupgrade, B = bugbear
select = ["F", "E", "W", "I", "UP", "B"]
# Ignore:
#   E501  line too long (handled by formatter)
#   B008  function calls in default args (common Flask/FastAPI pattern)
#   UP007 X | Y union syntax (readability preference)
ignore = ["E501", "B008", "UP007"]

[tool.ruff.lint.per-file-ignores]
# Tests use assert statements and broad exceptions freely
"tests/**/*.py" = ["B"]

[tool.ruff.lint.isort]
known-first-party = ["acb_large_print_web"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
